@@ -2078,7 +2078,7 @@ public class CxxWeaver extends ACxxWeaver {
         return Stream.concat(
                 super.getNpmResources().stream(),
                 Arrays.asList(ClavaApiJsResource.values()).stream())
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
